# cslug

./: .cirrus.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .style.yapf  .travis.yml  .yapfignore  Dockerfile_alpine  Dockerfile_manylinux  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  Vagrantfile  other compilers.txt  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  test-docker.yml  test-pgcc.yml  test-vagrant.yml  test-vm.yml  test.yml
_cslug_pyinstaller/: hook-cslug.py
cslug/: __init__.py  _cc.py  _cdll.py  _cslug.py  _headers.py  _pointers.py  _stdlib.py  _struct.py  _types_file.py  _version.py  building.py  c_parse.py  exceptions.py  misc.py  pointers.c  stdlib.json  stdlib.py
docs/: Makefile  README.md  autobuild  make.bat  requirements.txt
docs/demos/: typing.c
docs/demos/bytes/: encrypt.c  encrypt.py
docs/demos/errors/: errors.py  pedantic-log.c
docs/demos/globals/: globals.c  globals.py
docs/demos/headers/: file1.c  file2.c  my-header.h
docs/demos/memory/: memory.c  memory.py
docs/demos/multi-output/: multi-output.c  multi-output.py
docs/demos/strings/: reverse.c  reverse.py  strings-demo.c
docs/demos/structs/: cards.c  deque.c  deque.py  person.c  person.py
docs/source/: arrays-and-buffers.rst  conf.py  cpp.rst  customising-build.rst  error-handling.rst  globals.rst  headers.rst  index.rst  jargon.rst  oop-structs.rst  packaging.rst  quickstart.rst  rst_epilog.txt  strings-and-bytes.rst  tips.rst  tooltips_gen.py  types.rst
docs/source/_templates/: footer.html
docs/source/arrays-and-buffers/: arrays-and-buffers.rst  arrays-demo.c  arrays-demo.py  flatten.c  flatten.py  numpy.rst
docs/source/demo-stubs/: cards.rst
docs/source/icons/: README.md
docs/source/static/: table-highlight.js  theme-overrides.css  tooltip.css
docs/source/stubs/: cslug.building.rst  cslug.c_parse.rst  cslug.exceptions.rst  cslug.misc.rst  cslug.rst
docs/source/tips/: multiple-outputs.rst
history/: 0.1.1.rst  0.1.2.rst  0.2.0.rst  0.3.0.rst  0.4.0.rst  0.4.1.rst  0.5.0.rst  0.5.1.rst  0.5.2.rst  0.6.0.rst  0.7.0.rst  1.0.0.rst  README.md
packaging/: .gitignore  test.py
packaging/contains-slugs/: MANIFEST.in  README.md  build-manylinux-wheels.sh  pyproject.toml  setup.py
packaging/contains-slugs/contains_slugs/: __init__.py  __main__.py  deep-thought.c
stdlib/: OpenBSD  Windows MSVCRT  Windows UCRT  availability.py  docs.py  glibc Linux  musl Linux  parse.py  search_dlls.py  stdlib.md
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_building.py  test_c_parse.py  test_cc.py  test_header.py  test_misc.py  test_pointers.py  test_slugs.py  test_stdlib.py  test_structs.py  test_stubs.py  test_types_file.py  test_unicode.py  ugg.c  ugg.py
tests/docs/: test_demos.py  test_globals.py  test_sanity.py
tests/resources/: a.out  basic.c  basic.cpp  basic.py  high_macos_deployment_target.m  target_header.h  to_headerise.c
tests/resources/cc_versions/: MSVC-19.0.24210-x86_64  clang-11.0.0-x86_64  clang-12.0.0-x86_64  gcc-9.3.0-x86_64  pcc-1.1.0-i386  pgcc-21.9-x86_64  tcc-0.9.27-i386  tcc-0.9.27-x86_64
tests/resources/unicode/: escaped-literal.c  (+2 more)
(+7 files in other folders)
